some editing in code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    <title>Portfolio</title>
+    <title>VijaySingh</title>
   </head>
   <body>
     <div id="root"></div>
